fix spacing bug navbar

--- a/client/src/components/Navbar/index.module.scss
+++ b/client/src/components/Navbar/index.module.scss
@@ -27,11 +27,15 @@
     font-size: 1rem;
     height: 40px;
     color: white;
-    margin: 0 auto 0 1rem;
+    margin: 0 auto 0 auto;
     padding-right: 1rem;
     span {
+      display: block;
       width: 30px;
-      margin-left: 30px;
+      margin-left: 60px;
+    }
+    p {
+      display: block;
     }
   }
 }
